// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTaskCard edit button simulate 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TaskCard
    deleteTask={[Function]}
    item={
        Object {
            "count": 1,
            "created": "2018-05-06T07:43:23.236172Z",
            "done": false,
            "id": 89,
            "started": true,
            "title": "4",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "task-89",
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Connect(EditModal) />,
        <Connect(TimerModal) />,
        <WithStyles(CardContent)>
          <WithStyles(Typography)
                    component="h2"
                    variant="headline"
          >
                    4
          </WithStyles(Typography)>
          <WithStyles(Typography)
                    color="textSecondary"
          >
                    6th May 2018
          </WithStyles(Typography)>
          <WithStyles(Typography)
                    color="textSecondary"
          >
                    <WithStyles(Tooltip)
                              id="tooltip-icon"
                              title="Finished Pomodoro's"
                    >
                              <img
                                        alt="pomodoro"
                                        className="pomodoro-image"
                                        src="tomato.png"
                              />
                    </WithStyles(Tooltip)>
          </WithStyles(Typography)>
</WithStyles(CardContent)>,
        <WithStyles(CardActions)>
          <span />
</WithStyles(CardActions)>,
        <WithStyles(CardActions)>
          <div>
                    <WithStyles(Button)
                              color="primary"
                              onClick={[Function]}
                              size="small"
                    >
                              Edit
                    </WithStyles(Button)>
                    <WithStyles(Button)
                              color="primary"
                              onClick={[Function]}
                              size="small"
                    >
                              Start Task
                    </WithStyles(Button)>
                    <WithStyles(Button)
                              color="secondary"
                              onClick={[Function]}
                              size="small"
                    >
                              Delete
                    </WithStyles(Button)>
          </div>
</WithStyles(CardActions)>,
      ],
      "className": "task-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(Typography)
              component="h2"
              variant="headline"
>
              4
</WithStyles(Typography)>,
            <WithStyles(Typography)
              color="textSecondary"
>
              6th May 2018
</WithStyles(Typography)>,
            <WithStyles(Typography)
              color="textSecondary"
>
              <WithStyles(Tooltip)
                            id="tooltip-icon"
                            title="Finished Pomodoro's"
              >
                            <img
                                          alt="pomodoro"
                                          className="pomodoro-image"
                                          src="tomato.png"
                            />
              </WithStyles(Tooltip)>
</WithStyles(Typography)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "4",
              "component": "h2",
              "variant": "headline",
            },
            "ref": null,
            "rendered": "4",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "6th May 2018",
              "color": "textSecondary",
            },
            "ref": null,
            "rendered": "6th May 2018",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <WithStyles(Tooltip)
                  id="tooltip-icon"
                  title="Finished Pomodoro's"
>
                  <img
                                    alt="pomodoro"
                                    className="pomodoro-image"
                                    src="tomato.png"
                  />
</WithStyles(Tooltip)>,
              ],
              "color": "textSecondary",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "tooltip-89-0",
                "nodeType": "class",
                "props": Object {
                  "children": <img
                    alt="pomodoro"
                    className="pomodoro-image"
                    src="tomato.png"
/>,
                  "id": "tooltip-icon",
                  "title": "Finished Pomodoro's",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "pomodoro",
                    "className": "pomodoro-image",
                    "src": "tomato.png",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <span />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "span",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div>
            <WithStyles(Button)
                        color="primary"
                        onClick={[Function]}
                        size="small"
            >
                        Edit
            </WithStyles(Button)>
            <WithStyles(Button)
                        color="primary"
                        onClick={[Function]}
                        size="small"
            >
                        Start Task
            </WithStyles(Button)>
            <WithStyles(Button)
                        color="secondary"
                        onClick={[Function]}
                        size="small"
            >
                        Delete
            </WithStyles(Button)>
</div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <WithStyles(Button)
                color="primary"
                onClick={[Function]}
                size="small"
>
                Edit
</WithStyles(Button)>,
              <WithStyles(Button)
                color="primary"
                onClick={[Function]}
                size="small"
>
                Start Task
</WithStyles(Button)>,
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
                size="small"
>
                Delete
</WithStyles(Button)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Edit",
                "color": "primary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Edit",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Start Task",
                "color": "primary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Start Task",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Delete",
                "color": "secondary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Delete",
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "task-89",
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Connect(EditModal) />,
          <Connect(TimerModal) />,
          <WithStyles(CardContent)>
            <WithStyles(Typography)
                        component="h2"
                        variant="headline"
            >
                        4
            </WithStyles(Typography)>
            <WithStyles(Typography)
                        color="textSecondary"
            >
                        6th May 2018
            </WithStyles(Typography)>
            <WithStyles(Typography)
                        color="textSecondary"
            >
                        <WithStyles(Tooltip)
                                    id="tooltip-icon"
                                    title="Finished Pomodoro's"
                        >
                                    <img
                                                alt="pomodoro"
                                                className="pomodoro-image"
                                                src="tomato.png"
                                    />
                        </WithStyles(Tooltip)>
            </WithStyles(Typography)>
</WithStyles(CardContent)>,
          <WithStyles(CardActions)>
            <span />
</WithStyles(CardActions)>,
          <WithStyles(CardActions)>
            <div>
                        <WithStyles(Button)
                                    color="primary"
                                    onClick={[Function]}
                                    size="small"
                        >
                                    Edit
                        </WithStyles(Button)>
                        <WithStyles(Button)
                                    color="primary"
                                    onClick={[Function]}
                                    size="small"
                        >
                                    Start Task
                        </WithStyles(Button)>
                        <WithStyles(Button)
                                    color="secondary"
                                    onClick={[Function]}
                                    size="small"
                        >
                                    Delete
                        </WithStyles(Button)>
            </div>
</WithStyles(CardActions)>,
        ],
        "className": "task-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(Typography)
                component="h2"
                variant="headline"
>
                4
</WithStyles(Typography)>,
              <WithStyles(Typography)
                color="textSecondary"
>
                6th May 2018
</WithStyles(Typography)>,
              <WithStyles(Typography)
                color="textSecondary"
>
                <WithStyles(Tooltip)
                                id="tooltip-icon"
                                title="Finished Pomodoro's"
                >
                                <img
                                                alt="pomodoro"
                                                className="pomodoro-image"
                                                src="tomato.png"
                                />
                </WithStyles(Tooltip)>
</WithStyles(Typography)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "4",
                "component": "h2",
                "variant": "headline",
              },
              "ref": null,
              "rendered": "4",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "6th May 2018",
                "color": "textSecondary",
              },
              "ref": null,
              "rendered": "6th May 2018",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <WithStyles(Tooltip)
                    id="tooltip-icon"
                    title="Finished Pomodoro's"
>
                    <img
                                        alt="pomodoro"
                                        className="pomodoro-image"
                                        src="tomato.png"
                    />
</WithStyles(Tooltip)>,
                ],
                "color": "textSecondary",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "tooltip-89-0",
                  "nodeType": "class",
                  "props": Object {
                    "children": <img
                      alt="pomodoro"
                      className="pomodoro-image"
                      src="tomato.png"
/>,
                    "id": "tooltip-icon",
                    "title": "Finished Pomodoro's",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "pomodoro",
                      "className": "pomodoro-image",
                      "src": "tomato.png",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <span />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "span",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div>
              <WithStyles(Button)
                            color="primary"
                            onClick={[Function]}
                            size="small"
              >
                            Edit
              </WithStyles(Button)>
              <WithStyles(Button)
                            color="primary"
                            onClick={[Function]}
                            size="small"
              >
                            Start Task
              </WithStyles(Button)>
              <WithStyles(Button)
                            color="secondary"
                            onClick={[Function]}
                            size="small"
              >
                            Delete
              </WithStyles(Button)>
</div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <WithStyles(Button)
                  color="primary"
                  onClick={[Function]}
                  size="small"
>
                  Edit
</WithStyles(Button)>,
                <WithStyles(Button)
                  color="primary"
                  onClick={[Function]}
                  size="small"
>
                  Start Task
</WithStyles(Button)>,
                <WithStyles(Button)
                  color="secondary"
                  onClick={[Function]}
                  size="small"
>
                  Delete
</WithStyles(Button)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Edit",
                  "color": "primary",
                  "onClick": [Function],
                  "size": "small",
                },
                "ref": null,
                "rendered": "Edit",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Start Task",
                  "color": "primary",
                  "onClick": [Function],
                  "size": "small",
                },
                "ref": null,
                "rendered": "Start Task",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Delete",
                  "color": "secondary",
                  "onClick": [Function],
                  "size": "small",
                },
                "ref": null,
                "rendered": "Delete",
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`AddTaskCard edit button simulate 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TaskCard
    deleteTask={[Function]}
    item={
        Object {
            "count": 1,
            "created": "2018-05-06T07:43:23.236172Z",
            "done": false,
            "id": 89,
            "started": true,
            "title": "4",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "task-89",
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Connect(EditModal) />,
        <Connect(TimerModal) />,
        <WithStyles(CardContent)>
          <WithStyles(Typography)
                    component="h2"
                    variant="headline"
          >
                    4
          </WithStyles(Typography)>
          <WithStyles(Typography)
                    color="textSecondary"
          >
                    6th May 2018
          </WithStyles(Typography)>
          <WithStyles(Typography)
                    color="textSecondary"
          >
                    <WithStyles(Tooltip)
                              id="tooltip-icon"
                              title="Finished Pomodoro's"
                    >
                              <img
                                        alt="pomodoro"
                                        className="pomodoro-image"
                                        src="tomato.png"
                              />
                    </WithStyles(Tooltip)>
          </WithStyles(Typography)>
</WithStyles(CardContent)>,
        <WithStyles(CardActions)>
          <span />
</WithStyles(CardActions)>,
        <WithStyles(CardActions)>
          <div>
                    <WithStyles(Button)
                              color="primary"
                              onClick={[Function]}
                              size="small"
                    >
                              Edit
                    </WithStyles(Button)>
                    <WithStyles(Button)
                              color="primary"
                              onClick={[Function]}
                              size="small"
                    >
                              Start Task
                    </WithStyles(Button)>
                    <WithStyles(Button)
                              color="secondary"
                              onClick={[Function]}
                              size="small"
                    >
                              Delete
                    </WithStyles(Button)>
          </div>
</WithStyles(CardActions)>,
      ],
      "className": "task-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(Typography)
              component="h2"
              variant="headline"
>
              4
</WithStyles(Typography)>,
            <WithStyles(Typography)
              color="textSecondary"
>
              6th May 2018
</WithStyles(Typography)>,
            <WithStyles(Typography)
              color="textSecondary"
>
              <WithStyles(Tooltip)
                            id="tooltip-icon"
                            title="Finished Pomodoro's"
              >
                            <img
                                          alt="pomodoro"
                                          className="pomodoro-image"
                                          src="tomato.png"
                            />
              </WithStyles(Tooltip)>
</WithStyles(Typography)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "4",
              "component": "h2",
              "variant": "headline",
            },
            "ref": null,
            "rendered": "4",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "6th May 2018",
              "color": "textSecondary",
            },
            "ref": null,
            "rendered": "6th May 2018",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <WithStyles(Tooltip)
                  id="tooltip-icon"
                  title="Finished Pomodoro's"
>
                  <img
                                    alt="pomodoro"
                                    className="pomodoro-image"
                                    src="tomato.png"
                  />
</WithStyles(Tooltip)>,
              ],
              "color": "textSecondary",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "tooltip-89-0",
                "nodeType": "class",
                "props": Object {
                  "children": <img
                    alt="pomodoro"
                    className="pomodoro-image"
                    src="tomato.png"
/>,
                  "id": "tooltip-icon",
                  "title": "Finished Pomodoro's",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "pomodoro",
                    "className": "pomodoro-image",
                    "src": "tomato.png",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <span />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "span",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div>
            <WithStyles(Button)
                        color="primary"
                        onClick={[Function]}
                        size="small"
            >
                        Edit
            </WithStyles(Button)>
            <WithStyles(Button)
                        color="primary"
                        onClick={[Function]}
                        size="small"
            >
                        Start Task
            </WithStyles(Button)>
            <WithStyles(Button)
                        color="secondary"
                        onClick={[Function]}
                        size="small"
            >
                        Delete
            </WithStyles(Button)>
</div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <WithStyles(Button)
                color="primary"
                onClick={[Function]}
                size="small"
>
                Edit
</WithStyles(Button)>,
              <WithStyles(Button)
                color="primary"
                onClick={[Function]}
                size="small"
>
                Start Task
</WithStyles(Button)>,
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
                size="small"
>
                Delete
</WithStyles(Button)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Edit",
                "color": "primary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Edit",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Start Task",
                "color": "primary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Start Task",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Delete",
                "color": "secondary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Delete",
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "task-89",
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Connect(EditModal) />,
          <Connect(TimerModal) />,
          <WithStyles(CardContent)>
            <WithStyles(Typography)
                        component="h2"
                        variant="headline"
            >
                        4
            </WithStyles(Typography)>
            <WithStyles(Typography)
                        color="textSecondary"
            >
                        6th May 2018
            </WithStyles(Typography)>
            <WithStyles(Typography)
                        color="textSecondary"
            >
                        <WithStyles(Tooltip)
                                    id="tooltip-icon"
                                    title="Finished Pomodoro's"
                        >
                                    <img
                                                alt="pomodoro"
                                                className="pomodoro-image"
                                                src="tomato.png"
                                    />
                        </WithStyles(Tooltip)>
            </WithStyles(Typography)>
</WithStyles(CardContent)>,
          <WithStyles(CardActions)>
            <span />
</WithStyles(CardActions)>,
          <WithStyles(CardActions)>
            <div>
                        <WithStyles(Button)
                                    color="primary"
                                    onClick={[Function]}
                                    size="small"
                        >
                                    Edit
                        </WithStyles(Button)>
                        <WithStyles(Button)
                                    color="primary"
                                    onClick={[Function]}
                                    size="small"
                        >
                                    Start Task
                        </WithStyles(Button)>
                        <WithStyles(Button)
                                    color="secondary"
                                    onClick={[Function]}
                                    size="small"
                        >
                                    Delete
                        </WithStyles(Button)>
            </div>
</WithStyles(CardActions)>,
        ],
        "className": "task-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(Typography)
                component="h2"
                variant="headline"
>
                4
</WithStyles(Typography)>,
              <WithStyles(Typography)
                color="textSecondary"
>
                6th May 2018
</WithStyles(Typography)>,
              <WithStyles(Typography)
                color="textSecondary"
>
                <WithStyles(Tooltip)
                                id="tooltip-icon"
                                title="Finished Pomodoro's"
                >
                                <img
                                                alt="pomodoro"
                                                className="pomodoro-image"
                                                src="tomato.png"
                                />
                </WithStyles(Tooltip)>
</WithStyles(Typography)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "4",
                "component": "h2",
                "variant": "headline",
              },
              "ref": null,
              "rendered": "4",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "6th May 2018",
                "color": "textSecondary",
              },
              "ref": null,
              "rendered": "6th May 2018",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <WithStyles(Tooltip)
                    id="tooltip-icon"
                    title="Finished Pomodoro's"
>
                    <img
                                        alt="pomodoro"
                                        className="pomodoro-image"
                                        src="tomato.png"
                    />
</WithStyles(Tooltip)>,
                ],
                "color": "textSecondary",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "tooltip-89-0",
                  "nodeType": "class",
                  "props": Object {
                    "children": <img
                      alt="pomodoro"
                      className="pomodoro-image"
                      src="tomato.png"
/>,
                    "id": "tooltip-icon",
                    "title": "Finished Pomodoro's",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "pomodoro",
                      "className": "pomodoro-image",
                      "src": "tomato.png",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <span />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "span",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div>
              <WithStyles(Button)
                            color="primary"
                            onClick={[Function]}
                            size="small"
              >
                            Edit
              </WithStyles(Button)>
              <WithStyles(Button)
                            color="primary"
                            onClick={[Function]}
                            size="small"
              >
                            Start Task
              </WithStyles(Button)>
              <WithStyles(Button)
                            color="secondary"
                            onClick={[Function]}
                            size="small"
              >
                            Delete
              </WithStyles(Button)>
</div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <WithStyles(Button)
                  color="primary"
                  onClick={[Function]}
                  size="small"
>
                  Edit
</WithStyles(Button)>,
                <WithStyles(Button)
                  color="primary"
                  onClick={[Function]}
                  size="small"
>
                  Start Task
</WithStyles(Button)>,
                <WithStyles(Button)
                  color="secondary"
                  onClick={[Function]}
                  size="small"
>
                  Delete
</WithStyles(Button)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Edit",
                  "color": "primary",
                  "onClick": [Function],
                  "size": "small",
                },
                "ref": null,
                "rendered": "Edit",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Start Task",
                  "color": "primary",
                  "onClick": [Function],
                  "size": "small",
                },
                "ref": null,
                "rendered": "Start Task",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Delete",
                  "color": "secondary",
                  "onClick": [Function],
                  "size": "small",
                },
                "ref": null,
                "rendered": "Delete",
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`AddTaskCard start button simulate 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TaskCard
    item={
        Object {
            "count": 1,
            "created": "2018-05-06T07:43:23.236172Z",
            "done": false,
            "id": 89,
            "started": true,
            "title": "4",
          }
    }
    updateTaskStarted={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "task-89",
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Connect(EditModal) />,
        <Connect(TimerModal) />,
        <WithStyles(CardContent)>
          <WithStyles(Typography)
                    component="h2"
                    variant="headline"
          >
                    4
          </WithStyles(Typography)>
          <WithStyles(Typography)
                    color="textSecondary"
          >
                    6th May 2018
          </WithStyles(Typography)>
          <WithStyles(Typography)
                    color="textSecondary"
          >
                    <WithStyles(Tooltip)
                              id="tooltip-icon"
                              title="Finished Pomodoro's"
                    >
                              <img
                                        alt="pomodoro"
                                        className="pomodoro-image"
                                        src="tomato.png"
                              />
                    </WithStyles(Tooltip)>
          </WithStyles(Typography)>
</WithStyles(CardContent)>,
        <WithStyles(CardActions)>
          <span />
</WithStyles(CardActions)>,
        <WithStyles(CardActions)>
          <div>
                    <WithStyles(Button)
                              color="primary"
                              onClick={[Function]}
                              size="small"
                    >
                              Edit
                    </WithStyles(Button)>
                    <WithStyles(Button)
                              color="primary"
                              onClick={[Function]}
                              size="small"
                    >
                              Start Task
                    </WithStyles(Button)>
                    <WithStyles(Button)
                              color="secondary"
                              onClick={[Function]}
                              size="small"
                    >
                              Delete
                    </WithStyles(Button)>
          </div>
</WithStyles(CardActions)>,
      ],
      "className": "task-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(Typography)
              component="h2"
              variant="headline"
>
              4
</WithStyles(Typography)>,
            <WithStyles(Typography)
              color="textSecondary"
>
              6th May 2018
</WithStyles(Typography)>,
            <WithStyles(Typography)
              color="textSecondary"
>
              <WithStyles(Tooltip)
                            id="tooltip-icon"
                            title="Finished Pomodoro's"
              >
                            <img
                                          alt="pomodoro"
                                          className="pomodoro-image"
                                          src="tomato.png"
                            />
              </WithStyles(Tooltip)>
</WithStyles(Typography)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "4",
              "component": "h2",
              "variant": "headline",
            },
            "ref": null,
            "rendered": "4",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "6th May 2018",
              "color": "textSecondary",
            },
            "ref": null,
            "rendered": "6th May 2018",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <WithStyles(Tooltip)
                  id="tooltip-icon"
                  title="Finished Pomodoro's"
>
                  <img
                                    alt="pomodoro"
                                    className="pomodoro-image"
                                    src="tomato.png"
                  />
</WithStyles(Tooltip)>,
              ],
              "color": "textSecondary",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "tooltip-89-0",
                "nodeType": "class",
                "props": Object {
                  "children": <img
                    alt="pomodoro"
                    className="pomodoro-image"
                    src="tomato.png"
/>,
                  "id": "tooltip-icon",
                  "title": "Finished Pomodoro's",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "pomodoro",
                    "className": "pomodoro-image",
                    "src": "tomato.png",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <span />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "span",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <div>
            <WithStyles(Button)
                        color="primary"
                        onClick={[Function]}
                        size="small"
            >
                        Edit
            </WithStyles(Button)>
            <WithStyles(Button)
                        color="primary"
                        onClick={[Function]}
                        size="small"
            >
                        Start Task
            </WithStyles(Button)>
            <WithStyles(Button)
                        color="secondary"
                        onClick={[Function]}
                        size="small"
            >
                        Delete
            </WithStyles(Button)>
</div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <WithStyles(Button)
                color="primary"
                onClick={[Function]}
                size="small"
>
                Edit
</WithStyles(Button)>,
              <WithStyles(Button)
                color="primary"
                onClick={[Function]}
                size="small"
>
                Start Task
</WithStyles(Button)>,
              <WithStyles(Button)
                color="secondary"
                onClick={[Function]}
                size="small"
>
                Delete
</WithStyles(Button)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Edit",
                "color": "primary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Edit",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Start Task",
                "color": "primary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Start Task",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Delete",
                "color": "secondary",
                "onClick": [Function],
                "size": "small",
              },
              "ref": null,
              "rendered": "Delete",
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "task-89",
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Connect(EditModal) />,
          <Connect(TimerModal) />,
          <WithStyles(CardContent)>
            <WithStyles(Typography)
                        component="h2"
                        variant="headline"
            >
                        4
            </WithStyles(Typography)>
            <WithStyles(Typography)
                        color="textSecondary"
            >
                        6th May 2018
            </WithStyles(Typography)>
            <WithStyles(Typography)
                        color="textSecondary"
            >
                        <WithStyles(Tooltip)
                                    id="tooltip-icon"
                                    title="Finished Pomodoro's"
                        >
                                    <img
                                                alt="pomodoro"
                                                className="pomodoro-image"
                                                src="tomato.png"
                                    />
                        </WithStyles(Tooltip)>
            </WithStyles(Typography)>
</WithStyles(CardContent)>,
          <WithStyles(CardActions)>
            <span />
</WithStyles(CardActions)>,
          <WithStyles(CardActions)>
            <div>
                        <WithStyles(Button)
                                    color="primary"
                                    onClick={[Function]}
                                    size="small"
                        >
                                    Edit
                        </WithStyles(Button)>
                        <WithStyles(Button)
                                    color="primary"
                                    onClick={[Function]}
                                    size="small"
                        >
                                    Start Task
                        </WithStyles(Button)>
                        <WithStyles(Button)
                                    color="secondary"
                                    onClick={[Function]}
                                    size="small"
                        >
                                    Delete
                        </WithStyles(Button)>
            </div>
</WithStyles(CardActions)>,
        ],
        "className": "task-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(Typography)
                component="h2"
                variant="headline"
>
                4
</WithStyles(Typography)>,
              <WithStyles(Typography)
                color="textSecondary"
>
                6th May 2018
</WithStyles(Typography)>,
              <WithStyles(Typography)
                color="textSecondary"
>
                <WithStyles(Tooltip)
                                id="tooltip-icon"
                                title="Finished Pomodoro's"
                >
                                <img
                                                alt="pomodoro"
                                                className="pomodoro-image"
                                                src="tomato.png"
                                />
                </WithStyles(Tooltip)>
</WithStyles(Typography)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "4",
                "component": "h2",
                "variant": "headline",
              },
              "ref": null,
              "rendered": "4",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "6th May 2018",
                "color": "textSecondary",
              },
              "ref": null,
              "rendered": "6th May 2018",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <WithStyles(Tooltip)
                    id="tooltip-icon"
                    title="Finished Pomodoro's"
>
                    <img
                                        alt="pomodoro"
                                        className="pomodoro-image"
                                        src="tomato.png"
                    />
</WithStyles(Tooltip)>,
                ],
                "color": "textSecondary",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "tooltip-89-0",
                  "nodeType": "class",
                  "props": Object {
                    "children": <img
                      alt="pomodoro"
                      className="pomodoro-image"
                      src="tomato.png"
/>,
                    "id": "tooltip-icon",
                    "title": "Finished Pomodoro's",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "pomodoro",
                      "className": "pomodoro-image",
                      "src": "tomato.png",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <span />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "span",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div>
              <WithStyles(Button)
                            color="primary"
                            onClick={[Function]}
                            size="small"
              >
                            Edit
              </WithStyles(Button)>
              <WithStyles(Button)
                            color="primary"
                            onClick={[Function]}
                            size="small"
              >
                            Start Task
              </WithStyles(Button)>
              <WithStyles(Button)
                            color="secondary"
                            onClick={[Function]}
                            size="small"
              >
                            Delete
              </WithStyles(Button)>
</div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <WithStyles(Button)
                  color="primary"
                  onClick={[Function]}
                  size="small"
>
                  Edit
</WithStyles(Button)>,
                <WithStyles(Button)
                  color="primary"
                  onClick={[Function]}
                  size="small"
>
                  Start Task
</WithStyles(Button)>,
                <WithStyles(Button)
                  color="secondary"
                  onClick={[Function]}
                  size="small"
>
                  Delete
</WithStyles(Button)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Edit",
                  "color": "primary",
                  "onClick": [Function],
                  "size": "small",
                },
                "ref": null,
                "rendered": "Edit",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Start Task",
                  "color": "primary",
                  "onClick": [Function],
                  "size": "small",
                },
                "ref": null,
                "rendered": "Start Task",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Delete",
                  "color": "secondary",
                  "onClick": [Function],
                  "size": "small",
                },
                "ref": null,
                "rendered": "Delete",
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
